crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__function_definition-4.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&17)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 13,
        end: 14,
    },
)
