crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__function_definition-8.snap
---
source: tests/analysis/alpha034.rs
expression: symbol_table.symbols.get(&11)
---
Some(
    SymbolInfo {
        name: "foo",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [
                    (
                        FunctionArgument {
                            name: "a",
                            data_type: Any,
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        13..14,
                    ),
                    (
                        FunctionArgument {
                            name: "b",
                            data_type: Any,
                            is_optional: false,
                            default_value_type: None,
                            is_ref: false,
                        },
                        16..17,
                    ),
                ],
                is_public: false,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Any,
        is_definition: true,
        undefined: false,
        span: 9..12,
        contexts: [],
    },
)
