crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__generic_type_inference.snap
---
source: tests/analysis/alpha034.rs
expression: backend.files.generic_types.to_string()
---
"Text\nBool\nAny\n"
