crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__generics_reference-3.snap
---
source: tests/analysis/alpha034.rs
expression: foo_symbol.data_type.to_string(&backend.generic_types)
---
"Num | Text | [Num | Text]"
