crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__public_definitions-2.snap
---
source: tests/analysis/alpha034.rs
expression: symbol_table.symbols.get(&11)
---
Some(
    SymbolInfo {
        name: "foo",
        symbol_type: Function(
            FunctionSymbol {
                arguments: [],
                is_public: true,
                compiler_flags: [],
                docs: None,
            },
        ),
        data_type: Null,
        is_definition: true,
        undefined: false,
        span: 8..11,
        contexts: [],
    },
)
