crates/server/tests/analysis/snapshots/r#mod__analysis__alpha034__variable_definition-2.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&33)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 24,
        end: 25,
    },
)
